--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title style="color: green">Player Green</title>
+    <title>Student</title>
     <style>
         #spinner {
             margin: auto;
@@ -36,13 +36,13 @@
     </style>
 </head>
 <body style="margin: 10px">
-<h1 style="margin-left: 40%; color: green">Player Red</h1>
+<h1 style="margin-left: 40%">Student</h1>
 <h4>Name: Vighnesh Sivaraman</h4>
 <h4>UTA ID: 1001878596</h4>
 <div>
     <label for="name"><strong>Name: </strong></label>
     <input id="name" name="name" type="text">
-    <input id="save_name" class="btn btn-primary" value="Submit" onclick="saveTeacherName()" name="name" type="button">
+    <input id="save_name" class="btn btn-primary" value="Submit" onclick="saveStudentName()" name="name" type="button">
 </div>
 <div id="spinner" class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
     <span class="sr-only">Loading...</span>
