--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -39,16 +39,10 @@
 <h1 style="margin-left: 40%">Student</h1>
 <h4>Name: Vighnesh Sivaraman</h4>
 <h4>UTA ID: 1001878596</h4>
+<div>Time Elapsed: <span id="time_elapsed"></span></div>
+<label>Student Name: <span id="student_name"></span></label><br>
+<label>Teacher Name: <span id="teacher_name"></span></label><br>
 <div id="quiz">
-    <label>Student Name: <span id="student_name"></span></label><br>
-    <label>Teacher Name: <span id="teacher_name"></span></label><br>
-    <label for="question"><strong>Question: </strong>
-        <span id="question"></span></label><br>
-    <label for="answer"><strong>Answer: </strong></label>
-    <input id="answer" name="answer" type="text">
-    <input id="save_name" class="btn btn-primary" value="Submit" onclick="saveAnswer()" name="name" type="button"><br>
-    <label for="last_answer"><strong>Last saved Answer: </strong><span id="last_answer"></span></label><br>
-    <label for="last_score"><strong>Score from Teacher: </strong><span id="last_score"></span></label><br>
 </div>
 <br><br><br>
 
